findAll now accepts DateTimeUtc in place of Instant for the createdBefore and createdAfter parameters